fix footer img, bottom buttons, middle text alignment

--- a/index.css
+++ b/index.css
@@ -79,7 +79,7 @@ a{
 }
 
 header nav{
-    padding:5%;
+    padding:5% 0 0 0;
 }
 
 header nav a{
@@ -124,7 +124,7 @@ header section img{
     border-radius:50%;
     margin:5% 5% 5% 8%;
     display:inline-block;
-    vertical-align: bottom;
+    vertical-align: middle;
 }
 .text-container {
     width: 40%;
@@ -134,12 +134,16 @@ header section img{
 
 header section h1{
     display:inline-block;
-    width:40%;
-    font-size:4rem;
+    width:100%;
+    font-size: 5.4rem;
+    margin: 25px 75px;
 }
 
 header section p{
     display:inline-block;
+    padding: 0 0 25px 75px;
+    text-align: center;
+    font-size: 2rem;
 }
 
 header section div{
@@ -167,6 +171,7 @@ header section div{
     width: 140px;
     margin:auto;
     display:inherit;
+    padding-bottom: 1%;
 }
 
 .second-section p{
@@ -184,6 +189,7 @@ span{
     width: 140px;
     margin: auto;
     display: inherit;
+    padding-top: 3%;
 }
 
 .third-section p{
@@ -191,6 +197,7 @@ span{
     display: inherit;
     width: 25%;
     text-align: center;
+    padding-bottom: 3%;
 }
 footer{
     width: 100%;
@@ -217,14 +224,18 @@ footer nav a:nth-child(1){
     vertical-align: middle;
     width:10%;
     margin: 2% 10%;
+    font-size: 2rem;
+    padding: .5%;
 }
 
 footer nav a:nth-child(2){
     background-color:#5ED3EB;
     color:white;
     vertical-align: middle;
-    width:10%;
+    width:12%;
     margin: 2% 10%;
+    font-size: 2rem;
+    padding: .5%;
 }
 
 footer nav a:nth-child(3){
@@ -233,4 +244,6 @@ footer nav a:nth-child(3){
     vertical-align: middle;
     width:10%;
     margin: 2% 10%;
+    font-size: 2rem;
+    padding: .5%;
 }
